--- a/index.html
+++ b/index.html
@@ -20,25 +20,20 @@
     </head>
 
     <body>
-        <header>
-            <!-- place navbar here -->
-        </header>
         <main>
 
+ <select id="jsonSelect">
+    <option value="Cooper.json">Cooper</option>
+    <option value="Miller.json">Miller</option>
+    <option value="Brand.json">Brand</option>
+  </select>
 
-   <label for="jsonSelect">Choose a Person!</label>
-   <select id="jsonSelect">
-      <option value="Cooper.JSON">Cooper</option>
-      <option value="Miller.JSON">Annie</option>
-      <option value="Brand.JSON">Nick</option>
-   </select>
+  <table>
+    <thead id="tableHeader"></thead>
+    <tbody id="tableBody"></tbody>
+  </table>
 
-   <table border="1">
-      <thead id="tableHeader"></thead>
-      <tbody id="tableBody"></tbody>
-   </table>
-
-   <script src="script.js"></script>
+  <script src="script.js"></script>
 
         </main>
         <footer>
