Added the two other schedules to the dropdown

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
  <select id="jsonSelect">
     <option value="Cooper.json">Cooper</option>
-    <option value="Miller.json">Miller</option>
-    <option value="Brand.json">Brand</option>
+    <option value="Annie.json">Annie</option>
+    <option value="Nick.json">Nick</option>
   </select>
 
   <table>
