--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Layla and 3 other Friends Schedules</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -21,8 +21,11 @@
 
     <body>
         <main>
+    <h1 class="mt-4">Layla and 3 other Friends Schedules</h1>
+    <h3 class="mt-3 mb-4">Welcome! On this page you will find my schedule and Cooper, Nick, and Annie's schedules as well, click the drop down to see each schedule!</h3>
 
  <select id="jsonSelect">
+    <option value="Layla.json">Layla</option>
     <option value="Cooper.json">Cooper</option>
     <option value="Annie.json">Annie</option>
     <option value="Nick.json">Nick</option>
