--- a/index.html
+++ b/index.html
@@ -1,59 +1,68 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Layla and 3 other Friends Schedules</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+  <head>
+    <title>Layla and 3 other Friends Schedules</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="style.css"/>
-    </head>
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-    <body>
-        <main>
-    <h1 class="mt-4">Layla and 3 other Friends Schedules</h1>
-    <h3 class="mt-3 mb-4">Welcome! On this page you will find my schedule and Cooper, Nick, and Annie's schedules as well, click the drop down to see each schedule!</h3>
+  <body>
+    <main>
+      <h1 class="mt-4">Layla and 3 other Friends Schedules</h1>
+      <h3 class="mt-3 mb-4">
+        Welcome! On this page you will find my schedule and Cooper, Nick, and
+        Annie's schedules as well, click the drop down to see each schedule!
+      </h3>
 
- <select id="jsonSelect">
-    <option value="Layla.json">Layla</option>
-    <option value="Cooper.json">Cooper</option>
-    <option value="Annie.json">Annie</option>
-    <option value="Nick.json">Nick</option>
-  </select>
 
-  <table>
-    <thead id="tableHeader"></thead>
-    <tbody id="tableBody"></tbody>
-  </table>
+      <select id="jsonSelect">
+        <option value="Layla.json">Layla</option>
+        <option value="Cooper.json">Cooper</option>
+        <option value="Annie.json">Annie</option>
+        <option value="Nick.json">Nick</option>
+      </select>
+      <div>
+      <table>
+        <thead id="tableHeader"></thead>
+        <tbody id="tableBody"></tbody>
+      </table>
+    </div>
+      <h4>
+        *If you are wondering that this picture is, its from the movie
+        Frankenstein which I am really excited to see but it doesnt come out
+        till November <span style="font: size 50px">&#128557;</span>
+      </h4>
 
-  <script src="script.js"></script>
 
-        </main>
-        <footer>
-            <!-- place footer here -->
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
+    </main>
+    <footer>
+      <!-- place footer here -->
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-        <script src="script.js"></script>
-    </body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
