Hopefully fixed a slight problem

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </h3>
 
 
-      <select id="jsonSelect">
+      <select class="dropdown mt-5" id="jsonSelect">
         <option value="Layla.json">Layla</option>
         <option value="Cooper.json">Cooper</option>
         <option value="Annie.json">Annie</option>
@@ -40,11 +40,8 @@
         <tbody id="tableBody"></tbody>
       </table>
     </div>
-      <h4>
-        *If you are wondering that this picture is, its from the movie
-        Frankenstein which I am really excited to see but it doesnt come out
-        till November <span style="font: size 50px">&#128557;</span>
-      </h4>
+      
+
 
 
     </main>
