Commenting out my code

--- a/index.html
+++ b/index.html
@@ -21,19 +21,22 @@
 
   <body>
     <main>
+    <!--Title and Welcome Message-->
       <h1 class="mt-4">Layla and 3 other Friends Schedules</h1>
       <h3 class="mt-3 mb-4">
         Welcome! On this page you will find my schedule and Cooper, Nick, and
         Annie's schedules as well, click the drop down to see each schedule!
       </h3>
 
-
+      <!--Dropdown to select different schedules--->
       <select class="dropdown mt-5" id="jsonSelect">
         <option value="Layla.json">Layla</option>
         <option value="Cooper.json">Cooper</option>
         <option value="Annie.json">Annie</option>
         <option value="Nick.json">Nick</option>
       </select>
+
+      <!--Table to display each schedule-->
       <div>
       <table>
         <thead id="tableHeader"></thead>
