Commenting my code

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       </h3>
 
       <!--Dropdown to select different schedules--->
-      <select class="dropdown mt-5" id="jsonSelect">
-        <option value="Layla.json">Layla</option>
-        <option value="Cooper.json">Cooper</option>
-        <option value="Annie.json">Annie</option>
-        <option value="Nick.json">Nick</option>
+      <select class="dropdown mt-3 w-50" id="jsonSelect">
+        <option value="Layla.json">Layla's Schedule</option>
+        <option value="Cooper.json">Cooper's Schedule</option>
+        <option value="Annie.json">Annie's Schedule</option>
+        <option value="Nick.json">Nick's Schedule</option>
       </select>
 
       <!--Table to display each schedule-->
